# ovh-voip-spam-filter

./: .dockerignore  .gitignore  .pre-commit-config.yaml  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Dockerfile  README.fr.md  README.md  SECURITY.md  mkdocs.yml  pyproject.toml  renovate.json
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml
.github/workflows/: ci.yml  docs.yml  release.yml
docs/: api-reference.md  changelog.md  configuration.md  contributing.md  docker.md  index.fr.md  index.md  phase3-roadmap.md  pypi.md  quickstart.fr.md  quickstart.md  reconciliation.md  roadmap.md
site/: 404.html  index.html  objects.inv  sitemap.xml
site/api-reference/: index.html
site/changelog/: index.html
site/configuration/: index.html
site/contributing/: index.html
site/docker/: index.html
site/fr/: index.html
site/fr/api-reference/: index.html
site/fr/changelog/: index.html
site/fr/configuration/: index.html
site/fr/contributing/: index.html
site/fr/docker/: index.html
site/fr/pypi/: index.html
site/fr/quickstart/: index.html
site/fr/reconciliation/: index.html
site/fr/roadmap/: index.html
site/fr/security/: index.html
site/pypi/: index.html
site/quickstart/: index.html
site/reconciliation/: index.html
site/roadmap/: index.html
site/search/: search_index.json
site/security/: index.html
site/stylesheets/: extra.css
src/ovh_spam_filter/: __main__.py  arcep.py  cli.py  compact.py  config.py  logging_setup.py  ovh_api.py  ovh_csv.py  reconcile.py  saracroche.py
src/ovh_voip_spam_filter/: __init__.py  __main__.py  arcep.py  cli.py  config.py  logging_setup.py  ovh_api.py  ovh_csv.py  patterns.py  reconcile.py  saracroche.py
tests/: test_arcep_fallback.py  test_cli_parsing.py  test_config.py  test_gitignore.py  test_logging_setup.py  test_ovh_api.py  test_ovh_csv.py  test_package_metadata.py  test_patterns.py  test_reconcile.py  test_saracroche.py
